--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Peepers</h1>
 <pre>
 <h2>The Peepers Gallery!</h2>
-Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
+Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
 
 <img src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview">
   <b>Peepers getting dressed!</b>
