--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h2>The Peepers Gallery!</h2>
 Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
 
-<img src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview">
+<iframe src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview" height="450"></iframe>
   <b>Peepers getting dressed!</b>
 
 
