--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <h2>The Peepers Gallery!</h2>
 Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
 
-<iframe src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview" height="450"></iframe>
-  <b>Peepers getting dressed!</b>
+<iframe src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview" height="450"></iframe><iframe src="https://drive.google.com/file/d/17EZvDaZlxzENILagl70k5gaAxDnItgK8/preview" height="450"></iframe>
+  <b>Peepers getting dressed!		Peepers having fun!</b>
 
 
 <h1>Weather</h1>
