--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
 
 <iframe src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview" height="450"></iframe><iframe src="https://drive.google.com/file/d/17EZvDaZlxzENILagl70k5gaAxDnItgK8/preview" height="450"></iframe>
-  <b>Peepers getting dressed!		Peepers having fun!</b>
+  <b>Peepers getting dressed!		Peepers lovin' laundry!</b>
 
 
 <h1>Weather</h1>
