--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Family Website</title>
 <h1>Family Website</h1>
-<a href="index.html">Home</a> - <a href="news.html">Family News & Entertainment</a>
+<a href="index.html">Home</a> - <a href="news.html">Family News & Entertainment</a> - <a href="changelog.txt">Updates</a>
 <pre>
 <h2>The Peepers Gallery!</h2>
 Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
@@ -9,8 +9,12 @@ Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraf
   <b>Peepers getting dressed!		Peepers lovin' laundry!</b>
 
 
-<h1>Weather</h1>
+<h1>Weather (Towson, MD & Landenburg, PA)</h1>
 <a class="weatherwidget-io" href="https://forecast7.com/en/39d40n76d60/towson/?unit=us" data-label_1="TOWSON" data-label_2="WEATHER" data-theme="original" >TOWSON WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+<a class="weatherwidget-io" href="https://forecast7.com/en/39d78n75d77/landenberg/?unit=us" data-label_1="LANDENBERG" data-label_2="WEATHER" data-theme="original" >LANDENBERG WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
