--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraf
 <iframe src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview" height="450"></iframe><iframe src="https://drive.google.com/file/d/17EZvDaZlxzENILagl70k5gaAxDnItgK8/preview" height="450"></iframe>
   <b>Peepers getting dressed!		Peepers lovin' laundry!</b>
 
+<b><a href="videos.html">PRESS HERE FOR PEEPERS VIDEOS!</a></b>
 
 <h1>Weather (Towson, MD & Landenburg, PA)</h1>
 <a class="weatherwidget-io" href="https://forecast7.com/en/39d40n76d60/towson/?unit=us" data-label_1="TOWSON" data-label_2="WEATHER" data-theme="original" >TOWSON WEATHER</a>
