--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="http://freedns.afraid.org">Click here for Free DNS, they're cool.</a>
 <title>Family Website</title>
 <h1>Family Website</h1>
 <a href="index.html">Home</a> - <a href="news.html">Family News & Entertainment</a> - <a href="changelog.txt">Updates</a>
