--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
-<title>Family Website</title>
-<h1>Family Website</h1>
-<a href="index.html">Home</a> - <a href="news.html">Family News & Entertainment</a> - <a href="changelog.txt">Updates</a>
-<br>
-Subsites:<a href="subsite/m/index.html">Mary's Subsite</a>
-<pre>
-<h2>The Peepers Gallery!</h2>
-Email me at: <a href="mailto:UnlimitedMinecraft2011@gmail.com">UnlimitedMinecraft2011@gmail.com</a> to submit peepers photos!
-
-<iframe src="https://drive.google.com/file/d/10DDmbZJoeNl5fUxhtBd0x6LSg9IvBX0T/preview" height="450"></iframe><iframe src="https://drive.google.com/file/d/17EZvDaZlxzENILagl70k5gaAxDnItgK8/preview" height="450"></iframe><iframe src="https://drive.google.com/file/d/1upcSLSEGd7bnbDa-XmL8g6x0bQOkTrHW/preview" height="450"></iframe>
-  <b>Peepers getting dressed!		Peepers lovin' laundry!</b>
-
-<b><a href="videos.html">PRESS HERE FOR PEEPERS VIDEOS!</a></b>
-
-<h1>Weather (Towson, MD & Landenberg, PA)</h1>
-<a class="weatherwidget-io" href="https://forecast7.com/en/39d40n76d60/towson/?unit=us" data-label_1="TOWSON" data-label_2="WEATHER" data-theme="original" >TOWSON WEATHER</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Family Website</title>
+	<style>
+	a {
+		color: red;
+	}
+	</style>
+  </head>
+  <body bgcolor=black>
+  <font face="arial" color=green size=5>
+  <div align=center>
+  <h1>Peepers.Mywire.org</h1>
+  Welcome to the Family website
+  <br>
+  <marquee style="background-color: blue; color: white;" width=350><b><font face=arial>Please bookmark this website as Peepers.Mywire.Org</font></b></marquee>
+  <br>
+  <h2>Links</h2>
+  <a href="news.html">News & Entertainment</a>
+  <br>
+  <a href="peepers-gallery.html">Peepers Gallery</a>
+  <br>
+  <a href="subsite/m/index.html">Mary's Subsite</a>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <a class="weatherwidget-io" href="https://forecast7.com/en/39d40n76d60/towson/" data-label_1="TOWSON" data-label_2="WEATHER" data-theme="original" >TOWSON WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
-<a class="weatherwidget-io" href="https://forecast7.com/en/39d78n75d77/landenberg/?unit=us" data-label_1="LANDENBERG" data-label_2="WEATHER" data-theme="original" >LANDENBERG WEATHER</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
-&copy;2020 PixelGame
-</pre>
+  <br>
+  <br>
+  <br>
+  
+  &copy;2020 PixelGame Technologies
+  
+  
+  
+  
+  
+  </div>
+  </body>
+</html>
