--- a/news.html
+++ b/news.html
@@ -3,6 +3,11 @@
 <title>Family News & Entertainment</title>
 <h1>Family News</h1>
 
+<h2><i>New</i> Tickertape for news on homescreen!</h2>
+Make it easier for you to catch up on family & website
+news! All you have to do is read the home screen!
+<br>
+<br>
 <h2>Peepers and Tan are becoming great friends!</h2>
 The new family dog, Peepers, has became great friends
 with Tanner, mostly for food, but also because Peepers
