--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Error connecting to server. Try again later.
+<h1>peepers.mywire.org</h1>
+<pre>
+LINUX SERVER LOG
+
+[Minor] Error connecting to fallback server
+[!] User connected to peepers.mywire.org
+</pre>
+<a href="https://honestofficial.github.io/f/videopanel.html">Home Videos</a>
